# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files
load('@npm//@babel/cli:index.bzl', 'babel')

babel(
    name = "compile",
    data = [
        "app.js",
        "es5.babelrc",
        "@npm//@babel/preset-env",
    ],
    outs = ["app.es5.js"],
    args = [
        "app.js",
        "--config-file",
        "$(location es5.babelrc)",
        "--out-file",
        "$(location app.es5.js)",
    ],
)
